# shelf-mind

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  README_POST_CREATE.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  render.yaml  ruff.toml
.github/: copilot-instructions.md
.github/agents/: docs-agent.md  test-agent.md
.github/prompts/: plan-staticFolRelocation.prompt.md
.github/workflows/: ci.yml  docs.yml
docs/: contributing.md  getting-started.md  index.md  next-steps.md
docs/dev/: architecture.md  bugfix-csrf-htmx-token-delivery.md  configuration.md  index.md  infrastructure.md  services.md
docs/features/: 01_thing_registration.md  02_location_management.md  03_search.md
docs/guides/: pre_commit.md  uv.md  webapp_setup.md
docs/specs/: functional_specification.md  technical_architecture_specification.md
docs/user-guide/: index.md  locations.md  search.md  things.md
migrations/: env.py
scratch_space/feature_sample/: 01_sample.ipynb
scratch_space/shelf_mind_sample/: 01_params.ipynb
scratch_space/ui_test/: 01_ui_test.md  02_ui_test.md
scripts/webapp/: cdn_load.sh
src/shelf_mind/: __init__.py
static/css/: app.css
templates/: base.html
templates/pages/: dashboard.html  error.html  landing.html  locations.html  search.html  things.html
templates/partials/: flash.html  footer.html  location_detail.html  location_tree.html  navbar.html  search_results.html  thing_detail.html  thing_edit_form.html  things_list.html  user_card.html
tests/: __init__.py
(+105 files in other folders)
